fixed overlapping cards on hover

--- a/css/index.css
+++ b/css/index.css
@@ -84,6 +84,7 @@ p {
 }
 .cardContainer {
   text-align: center;
+  padding: 20px;
 }
 .card-img-top {
   height: 400px;
